--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,10 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cool_stepper:
+  cool_stepper_reloaded:
     path: ../
-  google_fonts: ^2.0.0
-  
+
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
